@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-10-30T08:12:14Z",
+  "timestamp" : "2023-10-30T16:12:00Z",
   "count_outdated" : 1078,
   "uniques_outdated" : 685,
-  "count" : 1113,
+  "count" : 1114,
   "uniques" : 707,
   "clones" : [
     {
@@ -133,9 +133,9 @@
     },
     {
       "timestamp": "2023-10-30T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
+      "count_decinc": [ 0, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
