@@ -1,3 +1,12 @@
+2023-10-30T16:12:00Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6695601980 # 1298
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-30
+* notice: last 14d: unq all: 3 34
+* notice: prev accum: outdated-unq outdated-all / unq all: 685 1078 / 707 1113
+* notice: next accum: outdated-unq outdated-all / unq all: 685 1078 / 707 1114
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [] / [2023-10-30]
+
 2023-10-30T08:12:14Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6689992523 # 1297
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-30
